@@ -124,7 +124,9 @@ module Rufus
 
       @started_at = nil
 
-      jobs.each { |j| j.unschedule }
+      #jobs.each { |j| j.unschedule }
+        # provokes https://github.com/jmettraux/rufus-scheduler/issue/98
+      @jobs.array.each { |j| j.unschedule }
 
       @work_queue.clear
 
