@@ -2,6 +2,11 @@
 = rufus-scheduler CHANGELOG.txt
 
 
+== rufus-scheduler - 3.0.6    not yet released
+
+- avoid "can't be called from trap context" on Ruby 2.0, gh-98
+
+
 == rufus-scheduler - 3.0.5    released 2014/01/30
 
 - implement Job#call(do_rescue=false), gh-97
